# libpm

./: meson.build  readme.md
doc/: Makefile  readme.md
doc/macros/: math.tex
doc/plots/: Makefile  mode-plot.py  plot.py
doc/tex/: biblio.tex  dynamics.tex  filter-corrections.tex  force-interpolation.tex  forces-solver.tex  intro.tex  nyquist.tex  pm.tex  sampling.tex  units.tex
examples/: meson.build
examples/1d-interpolation/: main.cpp  meson.build  plot.py  readme.md
examples/1d-interpolation/assets/: meson.build
examples/1d-power-spectrum/: main.cpp  meson.build  plot.py  readme.md
examples/3d-power-spectrum/: main.cpp  meson.build  plot-diff.py  plot.py  readme.md
examples/mini-body/: error.hpp  integration.hpp  main.cpp  meson.build  parser.hpp  state.hpp
examples/mini-body/paramfiles/: paramfile  readme.md
include/: libpm_filters.hpp  libpm_grid.hpp  libpm_grid_iterator.hpp  libpm_grid_range.hpp  meson.build  pm.hpp
include/pm/: field.hpp  filters.hpp  grid.hpp  grid_iterator.hpp  grid_range.hpp  meson.build  utilities.hpp
include/pm/detail/: fft.hpp  field.hpp  meson.build  utilities.hpp
tests/: 1d-interpolation.cpp  fftw.cpp  field-fft.cpp  field.cpp  filters.cpp  ghost.cpp  interpolation.cpp  meson.build  sampling.cpp  transpose.cpp  utils.cpp
